<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_background"
    android:layout_weight="1"
    android:gravity="center"
    tools:context=".SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Let's Join !!"
            android:textAlignment="center"
            android:textSize="40sp">
        </TextView>


    </LinearLayout>
    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="20dp"
        android:layout_margin="50dp">
        <EditText
            android:id="@+id/emailSgiUpET"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="emailAddress"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress">

        </EditText>
        <EditText
            android:id="@+id/passwordSignUpET"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_your_password"
            android:importantForAutofill="no"
            android:inputType="textPassword">
        </EditText>
        <EditText
            android:id="@+id/passwordConfirmationSignUpET"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/please_confirm_you_password"
            android:importantForAutofill="no"
            android:inputType="textPassword">
        </EditText>
        <TextView
            android:id="@+id/signUpBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:padding="20dp"
            android:background="#ffda94"/>
        <TextView
            android:id="@+id/loginSignUpTV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/have_account_login"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="#05437c"
            >

        </TextView>
    </LinearLayout>

</LinearLayout>